@startuml
hide circle
skinparam classAttributeIconSize 0
skinparam classIconSize 0

class TripBuddy
class "    Ui     " as Ui

package "user input"{
    class InputHandler
    class CommandHandler
    class Parser
}

package "expenses" {
class "<<singleton>> \n ExpenseManager" as ExpenseManager
class Expense
class "<<enumeration>> \n Currency" as Currency
}


class TripBuddy {
  -<u> initLogging(): void
  +<u>run(): void
  +main(): void
}

package "storage" {
class DataHandler
class FileHandler
}


class Ui


TripBuddy --> Ui
TripBuddy --> InputHandler
InputHandler --> CommandHandler
InputHandler --> Parser
TripBuddy --> ExpenseManager
CommandHandler -->ExpenseManager
ExpenseManager --> "baseCurrency" Currency
ExpenseManager *--> "expenses" Expense
DataHandler --> FileHandler
TripBuddy --> DataHandler

@enduml



